[gd_scene load_steps=2 format=2]

[ext_resource path="res://project/weapons/WeaponSpawner.gd" type="Script" id=1]

[node name="WeaponSpawner" type="Position2D" groups=[
"WeaponSpawner",
]]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="WeaponPosition" type="Position2D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="respawn_weapon"]
